When creating a new `Perform Action` referencing an existing `Action`, all compartments containing this new element are now expanded to reveal it.
- https://github.com/eclipse-syson/syson/issues/1272[#1272] [general-view] Fix an issue where the execution of _Add existing elements_ tool adding `Succession` with guard involving 'start' or 'done' were not well displayed.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1192[#1192] [general-view] Add `ConnectionDefinition` in _General View_ diagram
- https://github.com/eclipse-syson/syson/issues/1196[#1196] [general-view] Add _New Exhibit State with referenced State_ tool on `Part Usage` graphical elements.
- https://github.com/eclipse-syson/syson/issues/1214[#1214] [export] Implement textual export of `ForkNode`.
- https://github.com/eclipse-syson/syson/issues/1216[#1216] [export] Implement textual export of `JoinNode`.
- https://github.com/eclipse-syson/syson/issues/1217[#1217] [export] Implement textual export of `MergeNode`.
- https://github.com/eclipse-syson/syson/issues/1222[#1222] [general-view] Add `ItemUsage` as _bordered nodes_ of `ActionUsage` and `ActionDefinition` in the _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1226[#1226] [general-view] Add the possibility to create `FlowConnectionUsage` as graphical edges from `ItemUsage` _bordered nodes_ on _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1249[#1249] [import][export] Implement textual import/export of `AcceptActionUsage`.
- https://github.com/eclipse-syson/syson/issues/1247[#1247] [explorer] Type new `ViewUsage` from _Explorer_ view with _General View_ `ViewDefinition`.
When end-users click on _New Object_ on a semantic element, and select a `ViewUsage`, then a `ViewUsage` typed by default with the _General View_ `ViewDefinition` from the standard library will be created.