@@ -31,6 +31,8 @@ image::BindingConnectorAsUsageOnItemUsage.png[BindingConnectorAsUsage between tw
 If a _start_ or _done_ `ActionUsage` is used by an owned `TransitionUsage` they are now added to the _Action Flow_ compartment.
 - Fix an issue of `TransitionUsage` were displayed twice if the _source_ or _target_ of the `TransitionUsage` was displayed multiple times in the same diagram.
 
+- Fix an issue where the children of the `Package` graphical node lost their position when diagram is rendered after tab switching.
+
 == New features
 
 - `ViewUsage` may now be displayed and created from the _General View_.
